--- a/profile/index.html
+++ b/profile/index.html
@@ -69,7 +69,7 @@
         </table>
         <br>
         <div>
-        <img src="/photo.jpg" width="200px" height="150px">
+        <img src="./photo.jpg" width="200px" height="150px">
         </div>
     </div>
 
